GNOME Bugzilla – Bug 737403
Fix Enum check and missing break.
Last modified: 2014-10-06 04:53:54 UTC
Created attachment 287128 [details] [review] Fix Enum check and missing break. In file xmlreader.c 1. An enum is checked to proper value instead of checking like a boolean. 2. Missing break statement added. Please check patch.
Okay, looks fine, patch applied and pushed, thanks ! Daniel
*** Bug 734467 has been marked as a duplicate of this bug. ***